@@ -6,6 +6,7 @@
 - Support generic list and set injection into configuration classes
 - Add support for HTTP/2 protocol to the client and server
 - Enable HTTP/2 support in the client by default
+- Add HTTP version to client traces
 
 248
 
